# actions

./: Cargo.toml  LICENSE  README.md  goals.md  todo
docs/src/: SUMMARY.md  chapter_1.md  chapter_2.md  chapter_3.md  chapter_4.md  example_1.md
docs/tutorials/: chapter_1.html  chapter_2.html  chapter_3.html  chapter_4.html  example_1.html  index.html  print.html  searchindex.js  searchindex.json
examples/: manual_undo.rs  merge_actions.rs  simple.rs  timeline.rs
src/: action.rs  chain.rs  component.rs  error.rs  lib.rs  merge.rs  state.rs  timeline.rs
tests/: chain.rs  reduce.rs  timeline.rs
tests/helpers/: counter.rs  mod.rs
